--- a/k8s/services-deployments.yaml
+++ b/k8s/services-deployments.yaml
@@ -56,6 +56,13 @@ spec:
         - name: OUTPUT_TOPIC
           value: "sensors.processed"
         ports: [{ containerPort: 8000 }]
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
@@ -90,7 +97,16 @@ spec:
           value: "postgres"
         - name: DB_PASS
           value: "postgres"
+        - name: DB_NAME
+          value: "greenhouse"
         ports: [{ containerPort: 8000 }]
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
@@ -153,6 +169,13 @@ spec:
         - name: DB_NAME
           value: "greenhouse"
         ports: [{ containerPort: 8000 }]
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
@@ -184,3 +207,26 @@ spec:
           value: "200"
         - name: RATE_PER_SENSOR
           value: "0.2"
+---
+# frontend
+apiVersion: apps/v1
+kind: Deployment
+metadata: { name: frontend, namespace: greenhouse }
+spec:
+  replicas: 1
+  selector: { matchLabels: { app: frontend } }
+  template:
+    metadata: { labels: { app: frontend } }
+    spec:
+      containers:
+      - name: app
+        image: tu_usuario/frontend:latest
+        ports: [{ containerPort: 80 }]
+---
+apiVersion: v1
+kind: Service
+metadata: { name: frontend, namespace: greenhouse }
+spec:
+  selector: { app: frontend }
+  ports: [{ port: 80, targetPort: 80 }]
+  type: LoadBalancer
